--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,18 @@
-pillow==10.2.0
+aiohappyeyeballs==2.4.3
+aiohttp==3.11.0
+aiosignal==1.3.1
+async-timeout==5.0.1
+attrs==24.2.0
+discord-py==2.4.0
+frozenlist==1.5.0
+idna==3.10
 keyboard==0.13.5
 mouse==0.7.1
 mss==9.0.2
+multidict==6.1.0
+pillow==11.0.0
+propcache==0.2.0
+python-dotenv==1.0.1
+typing-extensions==4.12.2
+yarl==1.17.1
 
