--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
 aiohappyeyeballs==2.4.3
 aiohttp==3.11.0
 aiosignal==1.3.1
+async-timeout==5.0.1
 attrs==24.2.0
 customtkinter==5.2.2
 darkdetect==0.8.0
-discord-py==2.4.0
+discord==2.3.2
+discord.py==2.4.0
 frozenlist==1.5.0
 idna==3.10
 keyboard==0.13.5
@@ -13,6 +15,12 @@ mss==10.0.0
 multidict==6.1.0
 packaging==24.2
 pillow==11.0.0
+pip==23.2.1
 propcache==0.2.0
 python-dotenv==1.0.1
+setuptools==68.2.0
+typing_extensions==4.12.2
+wheel==0.41.2
 yarl==1.17.1
+
+
