added option to lock mouse

--- a/config.ini
+++ b/config.ini
@@ -1,5 +1,6 @@
 [settings]
-crop = Melon/Pumpkin
-monitor = 1
-use_repellent = True
+crop = Wheat/Potato
+monitor = 3
+use_repellent = False
+lockmouse = True
 
